--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.4.3",
+    "@heroicons/react": "^1.0.5",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "10.0.4",
@@ -44,6 +46,7 @@
   },
   "devDependencies": {
     "@sheerun/mutationobserver-shim": "0.3.3",
+    "autoprefixer": "^10.4.2",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-trybe-frontend": "1.2.2",
@@ -55,7 +58,9 @@
     "eslint-plugin-react-redux": "3.3.0",
     "eslint-plugin-sonarjs": "0.5.0",
     "jest-localstorage-mock": "2.4.3",
+    "postcss": "^8.4.5",
     "stylelint": "13.8.0",
-    "stylelint-config-standard": "20.0.0"
+    "stylelint-config-standard": "20.0.0",
+    "tailwindcss": "^3.0.15"
   }
 }
