feat: Implementa requisição para a api do Gravatar

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "10.0.4",
     "@testing-library/user-event": "7.2.1",
     "bootstrap": "4.5.2",
+    "crypto-js": "^4.1.1",
+    "crypto-js": "^4.1.1",
     "materialize-css": "^1.0.0-rc.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
