--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "crypto-js": "^4.1.1",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-google-charts": "^4.0.0",
@@ -22,8 +20,7 @@
     "react-scripts": "5.0.0",
     "redux": "4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "2.3.0",
-    "web-vitals": "^2.1.4"
+    "redux-thunk": "2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
