--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "temp",
+  "homepage": "https://mateusturola.github.io/trybewallet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,12 +27,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@sheerun/mutationobserver-shim": "0.3.3",
     "autoprefixer": "^10.4.2",
     "eslint": "6.8.0",
+    "gh-pages": "^3.2.3",
     "jest-localstorage-mock": "2.4.3",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15"
