--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "temp",
-  "homepage": "https://mateusturola.github.io/trybewallet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -27,9 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "@sheerun/mutationobserver-shim": "0.3.3",
